testcases/bindgen/165/error_message.txt
error[E0412]: cannot find type `T` in this scope
 --> ./open/165/generated_bindings.rs:4:32
  |
4 | pub type renamed = array_field<T>;
  |                                ^ not found in this scope

warning: type `array_field` should have an upper camel case name
 --> ./open/165/generated_bindings.rs:3:10
  |
3 | pub type array_field<T> = *mut T;
  |          ^^^^^^^^^^^ help: convert the identifier to upper camel case: `ArrayField`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `renamed` should have an upper camel case name
 --> ./open/165/generated_bindings.rs:4:10
  |
4 | pub type renamed = array_field<T>;
  |          ^^^^^^^ help: convert the identifier to upper camel case: `Renamed`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0412`.
